# matvey-3000

./: .envrc_template  .gitignore  Makefile  README.md  docker-compose-template.yml  matvey-template-v2.yml  matvey-template.toml  matvey-template.yml  pyproject.toml
.github/workflows/: build-push.yml
docker/: bot.Dockerfile
k8s/: .gitignore  configmaps.yaml.template  deployments.yaml.template  namespace.yaml  redis.yaml  secrets.yaml.template
k8s-monitoring/: .gitignore  grafana-secret.yaml.template  grafana.yaml  victoriametrics.yaml
scripts/: dump_data_from_storage.py
src/: bot.py  bot_handler.py  chat_completions.py  config.py  image_utils.py  message_store.py  metrics.py  providers.py  states.py
src/handlers/: __init__.py  admin.py  images.py  photo_edit.py  summary.py  text.py  voice.py
tests/: test_edit_pic.py  test_extract_message_chain.py  test_fsm_storage.py  test_handlers_import.py  test_image_utils.py  test_message_store.py  test_personal_config_parser.py
tests/integration/: test_replicate.py
